# lorebinders

./: .env.example  .pre-commit-config.yaml  PROJECT_DETAILS.md  README.md  pyproject.toml
docs/: README.md  api-reference.md  code-standards.md  codebase-summary.md  deployment-guide.md  design-guidelines.md  project-overview.md  system-architecture.md
plans/: observability-20260308.md
src/lorebinders/: __init__.py  agent_settings.py  app.py  models.py  settings.py  workflow.py
src/lorebinders/agent/: __init__.py  analysis.py  extraction.py  factory.py  summarization.py
src/lorebinders/agent/assets/prompts/: analysis.txt
src/lorebinders/cli/: __cli__.py  configuration.py
src/lorebinders/refinement/: __init__.py  cleaning.py  conversion.py  normalization.py  sorting.py
src/lorebinders/reporting/: pdf.py
src/lorebinders/storage/: factory.py  provider.py
src/lorebinders/storage/providers/: db.py  file.py  test.py
tests/: conftest.py  utils.py
tests/e2e/: test_full_cli.py
tests/integration/: test_agents.py
tests/unit/: test_app.py  test_models.py  test_observability.py  test_workflow.py
tests/unit/agents/: test_analysis_agent.py  test_analysis_parallel.py  test_extraction_agent.py  test_factory.py  test_settings.py  test_summarization_agent.py
tests/unit/refinement/: test_cleaning.py  test_conversion.py  test_sorting.py
tests/unit/reporting/: test_pdf.py
tests/unit/storage/: test_storage_db.py
