[project]
name = "lorebinders"
version = "0.3.0"
description = "Create a story bible with AI from a finished manuscript"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{ name = "Ashlynn Antrobus", email = "ashlynn@prosepal.io" }]
keywords = ["AI", "fiction", "manuscript", "story bible", "writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

dependencies = [
    "ebook2text>=2.2.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.41.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "typing-extensions>=4.15.0",
]

[project.scripts]
lorebinders = "lorebinders.app:run"
lorebinders-cli = "lorebinders.cli:cli"

[project.urls]
"Homepage" = "https://prosepal.io"

[project.optional-dependencies]
cli = [
    "rich>=14.2.0",
    "typer>=0.21.1",
]
db = [
    "sqlalchemy>=2.0.47",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0", { include-group = "testing" }, { include-group = "lint" }]
lint = [
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "types-reportlab>=1.2.0"
]
testing = [
    "pypdf>=6.6.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
disable_error_code = ["attr-defined"]
files = ["src/lorebinders/**/*.py"]
python_version = "3.11"
strict = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

[[tool.mypy.overrides]]
module = "tests.unit.test_models"
disable_error_code = ["call-arg", "arg-type"]

[[tool.mypy.overrides]]
module = "ebook2text.*"
ignore_missing_imports = true

[tool.ruff]
exclude = [
    "*.json",
    "*cache",
    "*cov",
    ".git",
    ".venv",
    ".vscode",
    "__pycache__",
    "work",
]
force-exclude = true
line-length = 80
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = ["A002", "ANN002", "ANN003", "ANN204", "D100", "D417"]
select = ["A", "ANN", "D", "DOC", "E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["ANN", "D", "DOC"]

[tool.ruff.lint.isort]
#:reorderArrays false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest]
addopts = ["--cov=lorebinders", "--cov-report=json", "--cov-fail-under=80", "-rf"]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = ["external: mark a test as requiring external an external dependency"]

[tool.coverage.run]
omit = ["types.py", "logging.py", "reporting/styles.py"]

[tool.coverage.report]
exclude_also = [
    "@(abc\\.)?abstractmethod",
    "__all__",
    "class .*\\bProtocol\\):",
    "def __repr__",
    "if 0:",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]
